2003-05-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am: only install the vanity desktop file on Linux
	systems, we could not build or install any of it, but it's not much
	point actually

2003-05-06  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (setup_config_video):
	revert change for the colour key, seems to break on some machines...
	(Closes: #112339)

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-06  Bastien Nocera  <hadess@hadess.net>

	* src/languages.h: add all the languages from ISO 639-1
	* src/totem.c: (language_name_get_from_code), (main): fix for the new
	ISO 639-1 table above, and add a notice for translators

2003-05-06  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_realize): don't
	try to create a goom if we don't have an audio ouput
	* src/gtk-playlist.c: (gtk_playlist_add_mrl): application/ogg and
	application/octet-stream are good mimetypes for us (octet streams can
	happen with streaming content)
	* src/totem-statusbar.c: (totem_statusbar_update_time):
	* src/totem.c: (update_mrl_label), (update_current_time): show
	"Streaming" when we have a file for which we don't know the length

2003-05-05  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/totem-random.pl: added, should make people on #111942 happy
	* data/totem.keys: added application/ogg to the list of supported
	mime-types

2003-05-03  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (setup_config_video),
	(bacon_video_widget_realize): setup the colour key for Xv as dark dark
	dark dark dark dark dark dark dark black, looks nicer
	* src/totem-preferences.c: (visual_menu_changed): only whinge about
	restarting totem if the visual is actually changed
	* src/totem.c: (video_widget_create):
	* src/vanity.c: (video_widget_create): remove the hard-coded size for