@@ -1,0 +1,8 @@
+    </oaf_attribute>
+    <oaf_attribute name="bonobo:supported_uri_schemes" type="stringv">
+      <item value="file" />
+    </oaf_attribute>
+    <oaf_attribute name="nautilus:property_page_name" type="string" _value="Audio/Video"/>
+  </oaf_server>
+
+</oaf_info>
