@@ -1,5 +1,13 @@
 2003-05-06  Bastien Nocera  <hadess@hadess.net>
 
+	* data/Makefile.am:
+	* data/Totem_properties.server.in.in._1:
+	* data/Totem_properties.server.in.in._3:
+	* data/servers.sh: added scripts and server file for the property
+	pages
+
+2003-05-06  Bastien Nocera  <hadess@hadess.net>
+
 	* configure.in:
 	* data/Makefile.am: only install the vanity desktop file on Linux
 	systems, we could not build or install any of it, but it's not much
